# zyncrate-linear-solver

./: .gitignore  CMakeLists.txt
include/: solver.hpp
src/: Permutation-algo.cpp  gauss.cpp  lu-algo.cpp
tests/: tests.cpp
